<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.ListOfDevice">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_on_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_round_blue"
        android:layout_margin="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/tv_bluetooth_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/montserrat_family"
            android:textFontWeight="600"
            android:textSize="16dp"
            android:text="@string/on"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/iv_bluetooth_switch"
            android:layout_width="80dp"
            android:layout_height="40dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="6dp"
            android:src="@drawable/ic_switch_on"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_on_off">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="16dp"
                    android:fontFamily="@font/montserrat_family"
                    android:textSize="16dp"
                    android:text="@string/bluetooth_list_desc"/>

                <TextView
                    android:id="@+id/tv_description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    android:padding="16dp"
                    android:fontFamily="@font/montserrat_family"
                    android:textSize="16dp"
                    android:text="@string/list_paired_device"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_paired_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_description2"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/tv_description3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_paired_device"
                    android:padding="16dp"
                    android:fontFamily="@font/montserrat_family"
                    android:textSize="16dp"
                    android:text="@string/list_available_device"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_available_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_description3"
                    tools:layout_editor_absoluteX="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="gone"
                android:id="@+id/layout_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_off_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="16dp"
                    android:fontFamily="@font/montserrat_family"
                    android:textSize="16dp"
                    android:text="@string/bluetooth_off_desc1"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>