<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorHomeBodyLayout"
    android:theme="@style/ThemeOverlay.DistanceDroid.FullscreenContainer"
    tools:context=".view.activity.MainActivity">

    <include
        android:id="@+id/layout_top_off"
        android:visibility="gone"
        layout="@layout/layout_bluetooth_off"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:id="@+id/layout_top_on"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom"
        android:padding="12dp"
        android:background="@drawable/bg_round_bottom">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bluetooth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/bg_round_honey_dew"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bluetooth_inside_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/iv_bluetooth"
                    android:layout_width="24dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_bluetooth"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <LinearLayout
                    android:id="@+id/layout_bluetooth_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    app:layout_constraintLeft_toRightOf="@id/iv_bluetooth"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_bluetooth_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="12dp"
                        android:text="@string/bluetooth"/>
                    <TextView
                        android:id="@+id/tv_bluetooth_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/black_overlay"
                        android:textSize="10dp"
                        android:text="@string/connected"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ImageView
                android:id="@+id/iv_bluetooth_switch1"
                android:layout_width="106dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_bluetooth_inside_top"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_switch_on"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_get_paired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/layout_bluetooth"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_yellow_selector">

            <TextView
                android:id="@+id/btn_get_paired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="12dp"
                android:text="@string/connect_to_device"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>